# Asset2Nani

./: .gitignore  CMakeLists.txt  README.md
data/: nanicmds.json
includes/: JSONValidator.hpp  Nani.hpp  NaniCmd.hpp  NaniCmdDeserializer.hpp  NaniCommon.hpp
src/: JSONValidator.cpp  Nani.cpp  NaniCmd.cpp  NaniCmdDeserializer.cpp  main.cpp
